# asqav-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-ZH.md  README.md  SECURITY.md  pyproject.toml  test_agent.py
.github/: FUNDING.yml  forbidden-patterns.txt  forbidden-tokens.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_request.yml
.github/workflows/: build-verifier-binary.yml  ci.yml  compliance.yml  forbidden-token-sweep.yml  governance.yml  publish.yml
conformance/: LICENSE  README.md  vectors.json
docs/: canonicalization.md  fingerprint-spec.md  github-actions.md  integrations-crewai.md  integrations-langchain.md  integrations-mcp.md  offline-verification.md  user-intent.md
examples/: README.md  autogen_integration.py  bind_config_digest.py  budget_tracking.py  dify_integration.py  dify_workflow.md  dspy_example.py  human_approval.py  quarterly_audit.py  scope_enforcement.py  smolagents_example.py  streamlit_dashboard.py
github-action/: README.md  action.yml  sign_code_authorship.py  test_sign_code_authorship.py
github-action-risk-acceptance/: README.md  action.yml  risk_acceptance.py  test_risk_acceptance.py
hooks/: README.md
python/: README-ZH.md  README.md  pyproject.toml
python/docs/: CLI.md  self-hosted-signer.md
python/examples/: autogen_integration.py  crewai_example.py  detector_plugin_example.py  dspy_example.py  fastapi_middleware.py  langchain_example.py  manifest_example.py  mcp_example.py  quickstart.py  reasoning_trace_example.py  schema_receipts_example.py  smolagents_example.py  strands_integration.py
python/src/asqav/: __init__.py  _detectors.py  _jcs.py  _mode.py  _schema.py  _sql_match.py  _useragent.py  async_client.py  canonicalize.py  cli.py  cli_hook.py  client.py  compliance.py  counterparty.py  decorators.py  demo.py  doors.py  hooks.py  ietf_projection.py  keys.py  local.py  patterns.py  pytest_plugin.py  reasoning.py  replay.py  retry.py  scope.py
python/src/asqav/extras/: __init__.py  _base.py  anthropic.py  crewai.py  dspy.py  haystack.py  instructor.py  langchain.py  letta.py  litellm.py  llamaindex.py  mcp.py  opa_detector.py  openai.py  openai_agents.py  presidio_detector.py  smolagents.py  strands.py
python/src/asqav/templates/shadow-ai/: .env.template  README.md  docker-compose.yml
python/src/asqav/verifier/: vc_export.py  verify_receipt.py
python/src/asqav/verifier/oracle/: README.md  __init__.py  __main__.py  adapter.py  canonical.py  core.py  crypto.py  runner.py
python/src/asqav/verifier/oracle/adapters/: __init__.py  acta.py  agentreceipts.py  asqav_native.py  pipelock.py
python/tests/: test_adapter_base.py  test_async_preflight_fail_closed.py  test_async_preflight_resolve_pattern.py  test_canonicalize.py  test_canonicalize_tool_args.py  test_cli.py  test_cli_hook.py  test_cli_shadow_ai.py  test_cli_shadow_ai_packaging.py  test_client.py  test_client_capture_topology.py  test_client_code_authorship.py  test_client_decision_alias.py  test_client_executable_hash_4tuple.py  test_client_hash_mode.py  test_client_ietf_anchors.py  test_client_ietf_fields.py  test_client_ietf_projection.py  test_client_nsa_aligned_fields.py  test_client_risk_acceptance.py  test_client_schema_receipts.py  test_client_threat_framework_mappings.py  test_client_witness_policy.py  test_co_signers.py  test_compliance_bundle.py  test_conformance_vectors.py  test_counterparty_binding.py  test_crewai_integration.py  test_cross_language_cases.py  test_decorators.py  test_demo_handler.py  test_deserializer_guards.py  test_detector_plugin.py  test_doors.py  test_dspy_integration.py  test_emergency_halt.py  test_explanations.py  test_extras.py  test_fastapi_middleware.py  test_govern.py  (+48 more)
src/asqav/: __init__.py  async_client.py  cli.py  client.py  compliance.py  decorators.py  demo.py  local.py  patterns.py  phases.py  reasoning.py  replay.py  scope.py
tests/: test_cli.py  test_client.py  test_compliance_bundle.py  test_conformance_vectors.py  test_dspy_integration.py  test_emergency_halt.py  test_explanations.py  test_extras.py  test_guardrail_provider.py  test_letta_integration.py  test_llamaindex_integration.py  test_phases.py  test_reasoning.py  test_replay.py  test_reproducibility.py  test_scope_tokens.py  test_trace_correlation.py
typescript/: .npmignore  README.md  node_modules  package-lock.json  package.json
typescript/examples/: README.md  agent-manifest.example.json  bind-config-digest.mjs  detector-plugin.ts  langchain-js.ts  mcp.ts  quickstart.ts  schema-receipts.ts  vercel-ai-sdk.ts
typescript/src/: algorithms.ts  budget.ts  canonicalize.ts  cli.ts  counterparty.ts  detectors.ts  doors.ts  hooks.ts  ietfProjection.ts  index.ts  jcs.ts  mode.ts  replay.ts  schema.ts  userAgent.ts
typescript/tests/: algorithms.test.ts  budget.test.ts  canonicalize-tool-args.test.ts  canonicalize.test.ts  captureTopology.test.ts  cli.test.ts  clientHashMode.test.ts  coSigners.test.ts  codeAuthorship.test.ts  counterparty.test.ts  cross-language-cases.test.ts  decisionAlias.test.ts  deserializer-guards.test.ts  destructiveSqlBypass.test.ts  detectorPlugin.test.ts  doors.test.ts  executableHash4Tuple.test.ts  generateNonce.test.ts  govern.test.ts  hooks.test.ts  ietfProfile.test.ts  jcs.test.ts  mode.test.ts  nsaAlignedFields.test.ts  offline-verify.test.ts  payloadFieldFallback.test.ts  preflight.test.ts  projection.test.ts  replay.test.ts  riskAcceptance.test.ts  schemaReceipts.test.ts  sdk.test.ts  threatFrameworkMappings.test.ts  userAgent.test.ts  userIntent.test.ts  v2-signer.test.ts  vercel-ai.test.ts  verifier-fail-clean.test.ts  verifier-parity.test.ts  verify-public.test.ts  (+3 more)
verifier/: README.md  __init__.py  cross-language-cases.json  test_verify_receipt.py  verify_receipt.py
verifier/conformance-vectors/: README.md  UPSTREAM.md  gen_acta_upstream_vectors.py  gen_acta_vectors.py  manifest.json
verifier/doors-parity/: divergence-input.json  divergence-python.jcs  divergence-typescript.jcs  golden-compliance.jcs  golden-hashmode.jcs  (+3 more)
(+167 files in other folders)
