[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asqav"
version = "0.5.2"
description = "AI agent governance - audit trails, policy enforcement, compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Asqav", email = "info@asqav.com" }
]
keywords = [
    "ai",
    "agents",
    "governance",
    "audit-trail",
    "compliance",
    "eu-ai-act",
    "policy-enforcement",
    "langchain",
    "crewai",
    "mcp",
    "ml-dsa",
    "ai-security",
    "openai-agents",
    "haystack",
    "llamaindex",
    "smolagents",
    "dspy",
    "strands-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
cli = ["typer>=0.12.0", "httpx>=0.24.0"]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.41.0"]
litellm = ["litellm>=1.83.14,!=1.82.7,!=1.82.8"]
haystack = ["haystack-ai>=2.0.0"]
openai-agents = ["openai-agents>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
smolagents = ["smolagents>=1.0.0"]
dspy = ["dspy>=2.5.0"]
letta = ["letta-client>=1.10.0"]
strands = ["strands-agents>=0.1.0"]
instructor = ["instructor>=1.5.0"]
all = [
    "httpx>=0.24.0",
    "typer>=0.12.0",
    "langchain-core>=0.2.0",
    "crewai>=0.41.0",
    "litellm>=1.83.14,!=1.82.7,!=1.82.8",
    "haystack-ai>=2.0.0",
    "openai-agents>=0.1.0",
    "llama-index-core>=0.10.0",
    "smolagents>=1.0.0",
    "dspy>=2.5.0",
    "letta-client>=1.10.0",
    "strands-agents>=0.1.0",
    "instructor>=1.5.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
asqav = "asqav.cli:app"

[project.entry-points.pytest11]
asqav = "asqav.pytest_plugin"

[project.urls]
Homepage = "https://asqav.com"
Documentation = "https://asqav.com/docs"
Repository = "https://github.com/jagmarques/asqav-sdk"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.sdist.force-include]
"src/asqav/templates/shadow-ai/.env.template" = "src/asqav/templates/shadow-ai/.env.template"

[tool.hatch.build.targets.wheel]
packages = ["src/asqav"]

[tool.hatch.build.targets.wheel.force-include]
"src/asqav/templates/shadow-ai/.env.template" = "asqav/templates/shadow-ai/.env.template"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/asqav/cli.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
