[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asqav"
version = "0.8.3"
description = "AI agent governance - audit trails, policy enforcement, compliance"
readme = "README.md"
license = "LicenseRef-Elastic-License-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Asqav", email = "info@asqav.com" }
]
keywords = [
    "ai",
    "agents",
    "governance",
    "audit-trail",
    "compliance",
    "eu-ai-act",
    "policy-enforcement",
    "langchain",
    "crewai",
    "ml-dsa",
    "ai-security",
    "openai-agents",
    "haystack",
    "llamaindex",
    "smolagents",
    "dspy",
    "strands-agents",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
# Standalone receipt verifier (verifier/verify_receipt.py). Pure-python FIPS 204
# ML-DSA-65 so a buyer can verify a receipt offline without liboqs. cryptography
# carries the Ed25519 and ES256 axes; without it those signatures downgrade to
# INCOMPLETE rather than verifying. The main SDK defers signing to the cloud.
verify = ["dilithium-py>=1.0.0", "cryptography>=42"]
cli = ["typer>=0.12.0", "httpx>=0.24.0"]
langchain = ["langchain-core>=0.2.0"]
# crewai hard-requires chromadb (CVE-2025-47947, CRITICAL, no upstream patch as of 2026-06-20).
# Removed from extras until crewai/chromadb ships a patched release.
# The integration module (extras/crewai.py) stays; users can install crewai
# manually alongside asqav and it will work via the lazy-import guard.
crewai = []
litellm = ["litellm>=1.83.14,!=1.82.7,!=1.82.8"]
haystack = ["haystack-ai>=2.0.0"]
openai-agents = ["openai-agents>=0.1.0"]
openai = ["openai>=1.0.0"]
# llama-index-core hard-requires nltk (CVE-2026-54293, no upstream patch as of 2026-06-20).
# Removed from extras until llama-index-core drops/patches nltk.
# The integration module (extras/llamaindex.py) stays; users can install llama-index-core
# manually alongside asqav and it will work via the lazy-import guard.
llamaindex = []
# smolagents has unpatched SSRF (CVE-2025-25979) and injection (CVE-2025-40616) as of 2026-06-20.
# Removed from extras until smolagents ships patched releases.
# The integration module (extras/smolagents.py) stays; users can install smolagents
# manually alongside asqav and it will work via the lazy-import guard.
smolagents = []
# dspy hard-requires diskcache (CVE-2024-12957, MEDIUM, no upstream patch as of 2026-06-20),
# and dspy itself has CVE-2025-1716 (file-read restriction bypass, no patch).
# Removed from extras until dspy/diskcache ship patched releases.
# The integration module (extras/dspy.py) stays; users can install dspy
# manually alongside asqav and it will work via the lazy-import guard.
dspy = []
letta = ["letta-client>=1.10.0"]
strands = ["strands-agents>=0.1.0"]
instructor = ["instructor>=1.5.0"]
# Pluggable detector extras (criterion 331): optional, lazy-imported.
presidio = ["presidio-analyzer>=2.2.0"]
opa = []
all = [
    "httpx>=0.24.0",
    "typer>=0.12.0",
    "langchain-core>=0.2.0",
    # crewai removed: hard-requires chromadb (CVE-2025-47947, CRITICAL, no patch).
    "litellm>=1.83.14,!=1.82.7,!=1.82.8",
    "haystack-ai>=2.0.0",
    "openai-agents>=0.1.0",
    # llama-index-core removed: hard-requires nltk (CVE-2026-54293, no patch).
    # smolagents removed: CVE-2025-25979, CVE-2025-40616, no patch.
    # dspy removed: hard-requires diskcache (CVE-2024-12957), plus CVE-2025-1716, no patch.
    "letta-client>=1.10.0",
    "strands-agents>=0.1.0",
    "instructor>=1.5.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
asqav = "asqav.cli:app"

[project.entry-points.pytest11]
asqav = "asqav.pytest_plugin"

[project.urls]
Homepage = "https://asqav.com"
Documentation = "https://asqav.com/docs"
Repository = "https://github.com/jagmarques/asqav-sdk"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.sdist.force-include]
"src/asqav/templates/shadow-ai/.env.template" = "src/asqav/templates/shadow-ai/.env.template"

[tool.hatch.build.targets.wheel]
packages = ["src/asqav"]

# The neutral verifier now lives under src/asqav/verifier, so packages=["src/asqav"]
# carries its runtime into BOTH the sdist and the wheel with no cross-root force-include.
# The conformance-vectors corpus and the verifier tests stay outside src/asqav, so they
# stay out of the built distributions. Only the templated .env needs a force-include
# because hatchling's default file selector skips dotfiles.
[tool.hatch.build.targets.wheel.force-include]
"src/asqav/templates/shadow-ai/.env.template" = "asqav/templates/shadow-ai/.env.template"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/asqav/cli.py" = ["E501"]
# The relocated neutral verifier carries long signed-message/error strings on one
# line so the reported note bytes stay greppable; line length is not enforced on it.
"src/asqav/verifier/**" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
